Update: Updated trio image styling, fixed height issue on mobile landscape.

--- a/css/_moi.scss
+++ b/css/_moi.scss
@@ -12,7 +12,6 @@
   border-bottom: 6vmin solid #fff;
   border-left: 6vmin solid #fff;
   border-radius: 10px;
-  box-sizing: border-box;
   -webkit-box-shadow: 0px 0px 15px 0px rgba(#000, .5);
   -moz-box-shadow: 0px 0px 15px 0px rgba(#000, .5);
   box-shadow: 0px 0px 15px 0px rgba(#000, .5);
@@ -34,15 +33,26 @@
     }
   }
 
-  @media only screen and (min-width: 551px) {
+  @media only screen and (orientation: landscape) and (max-height: 610px) {
     img {
-      height: 80vmin;
+      height: 70vh !important;
+    }
+
+    figcaption {
+      width: 55%;
+      font-size: .8rem;
+      margin-right: auto;
+      margin-left: auto;
     }
   }
 
-  @media only screen and (max-width: 550px) {
-    margin-left: -0.1vmin;
+  @media only screen and (orientation: landscape) {
+    img {
+      height: 80vh;
+    }
+  }
 
+  @media only screen and (orientation: portrait) {
     img {
       width: 80vw;
     }
